--- a/package.json
+++ b/package.json
@@ -8,15 +8,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.3.0",
+    "@mui/material": "^5.3.0",
+    "@mui/styles": "^5.3.0",
+    "ahooks": "^3.1.8",
+    "axios": "^0.25.0",
+    "classnames": "^2.3.1",
+    "framer-motion": "^5",
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-material-ui-carousel": "^3.1.1",
+    "sass": "^1.49.0",
+    "zustand": "^3.6.9"
   },
   "devDependencies": {
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
+    "@types/react-slick": "^0.23.8",
+    "autoprefixer": "^10.4.2",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
+    "postcss": "^8.4.5",
+    "tailwind-scrollbar": "^1.3.1",
+    "tailwindcss": "^3.0.15",
     "typescript": "4.5.5"
   }
 }
